Update header and change rekam jejak into 443

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <style>
     body { font-family: 'Montserrat', sans-serif; }
     .heading-font { font-family: 'Playfair Display', serif; }
+    html { scroll-behavior: smooth; }
     </style>
 
   </head>
@@ -26,10 +27,10 @@
         <!-- Right: Nav + CTA -->
         <div class="flex items-center gap-8">
           <nav class="hidden md:flex items-center gap-8 text-sm font-semibold">
-            <a href="#work" class="hover:text-pink-600">Work</a>
-            <a href="#about" class="hover:text-pink-600">About</a>
-            <a href="#services" class="hover:text-pink-600">Services</a>
-            <a href="#results" class="hover:text-pink-600">Results</a>
+            <a href="#programs" class="hover:text-pink-600">Who</a>
+            <a href="#vision" class="hover:text-pink-600">Visi</a>
+            <a href="#experience" class="hover:text-pink-600">Experience</a>
+            <a href="#sequence" class="hover:text-pink-600">Proker</a>
           </nav>
           <!-- <a href="#contact" class="hidden md:inline-flex items-center rounded-full bg-pink-500 text-white px-5 py-2 text-sm font-semibold shadow hover:bg-pink-600">
 Get started
@@ -47,11 +48,11 @@ Get started
       <!-- Mobile Menu -->
       <div id="mobileMenu" class="md:hidden hidden border-t border-slate-200 bg-[#faf6ed] w-full">
         <div class="px-6 py-6 space-y-6 text-base font-semibold">
-          <a href="#work" class="block hover:text-pink-600">Work</a>
-          <a href="#about" class="block hover:text-pink-600">About</a>
-          <a href="#services" class="block hover:text-pink-600">Services</a>
-          <a href="#results" class="block hover:text-pink-600">Results</a>
-          <a href="#contact" class="inline-flex items-center rounded-full bg-pink-500 text-white px-5 py-2 text-sm font-semibold shadow hover:bg-pink-600">Get started</a>
+          <a href="#programs" class="block hover:text-pink-600">Who</a>
+          <a href="#vision" class="block hover:text-pink-600">Visi</a>
+          <a href="#experience" class="block hover:text-pink-600">Experience</a>
+          <a href="#sequence" class="block hover:text-pink-600">Proker</a>
+          <!-- <a href="#contact" class="inline-flex items-center rounded-full bg-pink-500 text-white px-5 py-2 text-sm font-semibold shadow hover:bg-pink-600">Get started</a> -->
         </div>
       </div>
     </header>
@@ -76,6 +77,7 @@ Get started
         </div>
       </div>
     </section>
+
     <section id="programs" class="py-24">
       <div class="max-w-7xl mx-auto px-6 lg:px-12 grid lg:grid-cols-2 gap-12 items-center">
         <!-- Left: Text -->
@@ -186,11 +188,18 @@ Get started
           <p class="text-sm">PPI Munich</p>
         </li>
 
-        <li class="relative pl-8">
+        <li class="relative pl-8 mb-12">
           <span class="absolute left-4 top-2 w-3.5 h-3.5 bg-[#a23e48] rounded-full transform -translate-x-1/2"></span>
           <time class="block text-xs tracking-widest font-semibold text-[#171614]"> 11.2023 </time>
           <h3 class="mt-1 text-lg font-extrabold text-[#275891]"> Stage Manager II IKA 2023</h3>
           <p class="text-sm">PPI Munich</p>
+        </li>
+
+        <li class="relative pl-8">
+          <span class="absolute left-4 top-2 w-3.5 h-3.5 bg-[#a23e48] rounded-full transform -translate-x-1/2"></span>
+          <time class="block text-xs tracking-widest font-semibold text-[#171614]"> 12.2023 – 12.2024 </time>
+          <h3 class="mt-1 text-lg font-extrabold text-[#275891]">Ketua Umum</h3> 
+          <p class="text-sm">PPI Munich 2023/2024</p>
         </li>
       </ol>
 
@@ -198,10 +207,6 @@ Get started
       <ol class="relative">
         <span class="absolute left-4 top-0 bottom-0 w-px bg-[#171614]"></span>
 
-        <li class="relative pl-8 mb-12">
-          <span class="absolute left-4 top-2 w-3.5 h-3.5 bg-[#a23e48] rounded-full transform -translate-x-1/2"></span>
-          <time class="block text-xs tracking-widest font-semibold text-[#171614]"> 12.2023 – 12.2024 </time>
-          <h3 class="mt-1 text-lg font-extrabold text-[#275891]">Ketua Umum</h3> <p class="text-sm">PPI Munich 2023/2024</p></li>
 
         <li class="relative pl-8 mb-12">
           <span class="absolute left-4 top-2 w-3.5 h-3.5 bg-[#a23e48] rounded-full transform -translate-x-1/2"></span>
@@ -217,24 +222,24 @@ Get started
           <p class="text-sm">PPI Munich</p>
         </li>
 
-        <li class="relative pl-8">
+        <li class="relative pl-8 mb-12">
           <span class="absolute left-4 top-2 w-3.5 h-3.5 bg-[#a23e48] rounded-full transform -translate-x-1/2"></span>
           <time class="block text-xs tracking-widest font-semibold text-[#171614]"> 10.2024 – 08.2025 </time>
           <h3 class="mt-1 text-lg font-extrabold text-[#275891]"> Auditor Kegiatan Badan Pengawas Kegiatan dan Keuangan</h3>
           <p class="text-sm">PPI Jerman 2024/2025</p>
+        </li>
+
+        <li class="relative pl-8">
+          <span class="absolute left-4 top-2 w-3.5 h-3.5 bg-[#a23e48] rounded-full transform -translate-x-1/2"></span>
+          <time class="block text-xs tracking-widest font-semibold text-[#171614]"> 12.2024 – 12.2025 </time>
+          <h3 class="mt-1 text-lg font-extrabold text-[#275891]"> Anggota Dewan Pengawas Organisasi</h3>
+          <p class="text-sm">PPI Munich 2024/2025</p>
         </li>
       </ol>
 
       <!-- Column 3 -->
       <ol class="relative">
         <span class="absolute left-4 top-0 bottom-0 w-px bg-[#171614]"></span>
-
-        <li class="relative pl-8 mb-12">
-          <span class="absolute left-4 top-2 w-3.5 h-3.5 bg-[#a23e48] rounded-full transform -translate-x-1/2"></span>
-          <time class="block text-xs tracking-widest font-semibold text-[#171614]"> 12.2024 – 12.2025 </time>
-          <h3 class="mt-1 text-lg font-extrabold text-[#275891]"> Anggota Dewan Pengawas Organisasi</h3>
-          <p class="text-sm">PPI Munich 2024/2025</p>
-        </li>
 
         <li class="relative pl-8 mb-12">
           <span class="absolute left-4 top-2 w-3.5 h-3.5 bg-[#a23e48] rounded-full transform -translate-x-1/2"></span>
@@ -378,6 +383,30 @@ Pendidikan
         });
       }
 
+      const navLinks = document.querySelectorAll('header nav a');
+      const sections = Array.from(document.querySelectorAll('section[id]'));
+      window.addEventListener('scroll', highlightNav);
+      highlightNav();
+
+      function highlightNav() {
+        const scrollPos = window.scrollY + 150; 
+        navLinks.forEach(link => {
+          link.classList.remove('text-pink-600');
+        });
+
+        for (const section of sections) {
+          const top    = section.offsetTop;
+          const bottom = top + section.offsetHeight;
+
+          if (scrollPos >= top && scrollPos < bottom) {
+            const activeLink = document.querySelector(
+              `header nav a[href="#${section.id}"]`
+            );
+            if (activeLink) activeLink.classList.add('text-pink-600');
+            break; 
+          }
+        }
+      }
       // AOS initialization
       const addAosScript = () => {
         const script = document.createElement("script");
