--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8" />https://github.com/triciaviannisa/melangkahbersama/edit/main/index.html
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Maria Patricia Viannisa</title>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -28,10 +28,10 @@
         <!-- Right: Nav + CTA -->
         <div class="flex items-center gap-8">
           <nav class="hidden md:flex items-center gap-8 text-sm font-semibold">
-            <a href="#programs" class="hover:text-pink-600">Who</a>
-            <a href="#vision" class="hover:text-pink-600">Visi</a>
-            <a href="#experience" class="hover:text-pink-600">Experience</a>
-            <a href="#sequence" class="hover:text-pink-600">Proker</a>
+            <a href="#programs" class="hover:text-pink-600">Profil Calon</a>
+            <a href="#vision" class="hover:text-pink-600">Visi & Misi</a>
+            <a href="#experience" class="hover:text-pink-600">Rekam Jejak Organisasi</a>
+            <a href="#sequence" class="hover:text-pink-600">Program Kerja</a>
           </nav>
           <!-- <a href="#contact" class="hidden md:inline-flex items-center rounded-full bg-pink-500 text-white px-5 py-2 text-sm font-semibold shadow hover:bg-pink-600">
 Get started
