--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />https://github.com/triciaviannisa/melangkahbersama/edit/main/index.html
+    <meta charset="UTF-8"
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Maria Patricia Viannisa</title>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -92,26 +92,30 @@ Get started
           </p>
           <p class="text-base text-[#171614]/90 leading-relaxed mb-4">
             Di samping studi, aku juga turut aktif berorganisasi di PPI Munich dan PPI Jerman.
-            Langkahku bersama PPI dimulai pada awal tahun 2023, di mana aku bergabung menjadi Staf Departemen Hubungan Masyarakat PPI Munich 2023.
-            Pada periode itu, aku pun dipercaya untuk menjadi Ketua Pelaksana Welcomming Party PPI Munich pada Sommersemester 2023 dan Wintersemester 2023/2024,
-            serta menjadi Ketua Divisi Publikasi acara malam budaya IKA yang diselenggarakan oleh PPI Munich dan Swadaya Indonesia München.
+            Langkahku bersama PPI dimulai awal 2023 sebagai Staf Departemen Hubungan Masyarakat PPI Munich.
+            Pada periode yang sama, aku juga dipercaya menjadi menjadi Ketua Pelaksana Welcomming Party PPI Munich pada Sommersemester 2023 dan Wintersemester 2023/2024,
+            serta menjadi Ketua Divisi Publikasi dan Stage Manager II acara malam budaya Indonesischer Kulturabend yang diselenggarakan oleh PPI Munich bersama Swadaya Indonesia München.
           </p>
           <p class="text-base text-[#171614]/90 leading-relaxed mb-4">
-            Lalu, pada bulan November 2023, aku diamanahkan menajdi Kepala Departemen Pers dan Hubungan Masyarakat PPI Jerman,
-            di mana aku memperdalam kemampuan kepemimpinanku dan mengembangkan keterampilan pers dan hubungan masyarakat dengan jangkauan yang lebih luas.
-            Bersama dengan 14 anggota departemen lainnya, kami berhasil menyuseskan 13 program kerja yang berjalan secara berkelanjutan selama 10 bulan periode PPI Jerman pada saat itu.
+            Lalu, pada bulan November 2023, aku diamanahkan menjadi Kepala Departemen Pers dan Hubungan Masyarakat PPI Jerman, peran yang memperdalam kemampuan kepemimpinanku
+            dan mengembangkan keterampilan pers dan hubungan masyarakat dengan jangkauan yang lebih luas.
+            Bersama dengan 14 anggota departemen lainnya, kami berhasil menyukseskan 13 program kerja yang berjalan secara berkelanjutan selama 10 bulan periode PPI Jerman pada saat itu.
           </p>
           <p class="text-base text-[#171614]/90 leading-relaxed mb-4">
             Satu bulan setelahnya, aku mendapatkan kepercayaan untuk menjadi Ketua Umum PPI Munich periode 2023/2024.
-            Pada periode ini, kami berhasil menjalankan 47 program kerja, salah satunya Sports and Culinary Festival perdana oleh PPI Munich, yaitu KAISER Munich.
+            Selama periode ini, kami berhasil menyelenggarakan 47 program kerja, salah satunya Sports and Culinary Festival perdana oleh PPI Munich, yaitu KAISER Munich.
             Kami juga berhasil menyelenggarakan Career & Networking Session bersama IPA Germany, yang merupakan acara pertama PPI Munich dalam ranah pengembangan karier anggotanya.
           </p>
           <p class="text-base text-[#171614]/90 leading-relaxed mb-4">
-            Selama menjadi anggota pengurus PPI, aku merasa sangat nyaman menjadi bagian dari sebuah organisasi bersama sesama pelajar Indonesia lainnya.
-            Aku mendapatkan banyak kesempatan untuk berkumpul, hingga akhirnya bertemu dengan banyak orang yang terasa seperti keluarga sendiri, menjadikan PPI Munich dan PPI Jerman rumah yang jauh dari tanah air.
+            Selama menjadi bagian dari PPI, aku merasakan kenyamanan berada di tengah komunitas pelajar Indonesia.
+            Berbagai kesempatan untuk berkumpul dan bertumbuh bersama membawa aku pada pertemuan dengan banyak orang yang kini terasa seperti keluarga sendiri,
+            menjadikan PPI Munich dan PPI Jerman rumah yang jauh dari tanah air. 
+
+
           </p>
           <p class="text-base text-[#171614]/90 leading-relaxed">
-            Terinspirasi dari semangat ini, motivasi terbesarku adalah untuk menjadikan PPI Jerman sebagai organisasi yang dapat memberikan kenyamanan dan kehangatan tidak hanya untuk pengurus, tetapi juga untuk seluruh pelajar Indonesia di Jerman.
+            Berangkat dari semangat ini, pencalonanku sebagai Ketua Umum PPI Jerman 2025/2026 Nomor Urut 2 lahir dari motivasiku untuk menghadirkan kembali kenyamanan, kehangatan, dan ruang inklusif yang pernah aku rasakan,
+            tidak hanya untuk pengurus, melainkan juga untuk setiap pelajar Indonesia di Jerman.
           </p>
         </div>
 
@@ -259,7 +263,7 @@ Get started
         <li class="relative pl-8">
           <span class="absolute left-4 top-2 w-3.5 h-3.5 bg-[#a23e48] rounded-full transform -translate-x-1/2"></span>
           <time class="block text-xs tracking-widest font-semibold text-[#171614]"> 09.2025 </time>
-          <h3 class="mt-1 text-lg font-extrabold text-[#275891]"> Calon Ketua Umum PPI Jerman 2025/2026</h3>
+          <h3 class="mt-1 text-lg font-extrabold text-[#a23e48]"> Calon Ketua Umum PPI Jerman 2025/2026</h3>
           <p class="text-sm">Nomor Urut 2</p>
         </li>
       </ol>
@@ -292,7 +296,7 @@ Pendidikan
         <h3 class="text-xl font-bold text-[#275891] leading-snug mb-2">
           Studienkolleg Mittelhessen
         </h3>
-        <p class="text-sm font-semibold text-[#171614]/80">The Philipp University of Marburg</p>
+        <p class="text-sm font-semibold text-[#171614]/80">Philipp University of Marburg</p>
       </div>
 
       <!-- Box 3 -->
@@ -301,7 +305,7 @@ Pendidikan
         <h3 class="text-xl font-bold text-[#275891] leading-snug mb-2">
           B.Sc. Computational Linguistics
         </h3>
-        <p class="text-sm font-semibold text-[#171614]/80">The Ludwig Maximilian University of Munich</p>
+        <p class="text-sm font-semibold text-[#171614]/80">Ludwig Maximilian University of Munich</p>
       </div>
     </div>
   </div>
@@ -439,7 +443,7 @@ Pendidikan
         },
         "02": {
           title: "PELATIHAN KADERISASI",
-          desc: "Pelatihan Kaderisasi PPI Jerman merupakan program strategis yang bertujuan membekali pengurus dengan keterampilan organisasi, kepemimpinan, dan kolaborasi yang dapat diterapkan di dalam maupun di luar PPI. Program ini tidak hanya berfokus pada transfer pengetahuan, tetapi juga pada pembentukan karakter, solidaritas, dan kesiapan pengurus dalam menjaga kesinambungan organisasi. Sebagai program kerja kunci, pelatihan ini terbuka untuk seluruh pengurus PPI Jerman dan PPI cabang, sehinggaseluruh lini kepengurusan dapat berkembang secara selaras, memperkuat kesinambungan organisasi, dan memastikankaderisasi berjalan merata di tingkat nasional maupun internasional.",
+          desc: "Pelatihan Kaderisasi PPI Jerman merupakan program strategis yang bertujuan membekali pengurus dengan keterampilan organisasi, kepemimpinan, dan kolaborasi yang dapat diterapkan di dalam maupun di luar PPI. Program ini tidak hanya berfokus pada transfer pengetahuan, tetapi juga pada pembentukan karakter, solidaritas, dan kesiapan pengurus dalam menjaga kesinambungan organisasi. Sebagai program kerja kunci, pelatihan ini terbuka untuk seluruh pengurus PPI Jerman dan PPI cabang, sehingga seluruh lini kepengurusan dapat berkembang secara selaras, memperkuat kesinambungan organisasi, dan memastikan kaderisasi berjalan merata di tingkat nasional maupun internasional.",
         },
         "03": {
           title: "CAREER & NETWORKING EVENT",
