date change.html

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ Pendidikan
     <div class="grid gap-8 md:grid-cols-2 lg:grid-cols-3">
       <!-- Box 1 -->
       <div class="flex flex-col h-full rounded-2xl border border-[#275891] p-8">
-        <div class="text-sm font-bold text-[#A23E48] mb-3">Jul 2017 – May 2020</div>
+        <div class="text-sm font-bold text-[#A23E48] mb-3">Jul 2017 – Mei 2020</div>
         <h3 class="text-xl font-bold text-[#275891] leading-snug mb-2">
           SMA Santa Ursula BSD
         </h3>
@@ -301,7 +301,7 @@ Pendidikan
 
       <!-- Box 3 -->
       <div class="flex flex-col h-full rounded-2xl border border-[#275891] p-8">
-        <div class="text-sm font-bold text-[#A23E48] mb-3">Oct 2021 – Sekarang</div>
+        <div class="text-sm font-bold text-[#A23E48] mb-3">Okt 2022 – sekarang</div>
         <h3 class="text-xl font-bold text-[#275891] leading-snug mb-2">
           B.Sc. Computational Linguistics
         </h3>
